# rag-documents-api

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_office_file_types.py
docker/: Dockerfile
src/rag/: __init__.py  config.py  main.py  schemas.py
src/rag/api/: deps.py
src/rag/api/routes/: documents.py  query.py
src/rag/core/: chunker.py  embedder.py  extractor.py  llm.py
src/rag/db/: chroma.py  models.py  postgres.py  repositories.py
src/rag/services/: ingestion.py  retrieval.py
tests/: conftest.py
tests/integration/: test_ingestion_api.py  test_query_api.py
tests/unit/: test_chunker.py  test_embedder.py  test_extractor.py
